# stow-dploy

./: .gitignore  CHANGELOG.md  README.md  cspell.config.yaml  pyproject.toml  requirements.txt  setup.cmd  tasks.py  tox.ini
.github/workflows/: codeql.yml  python-package.yml
dploy/: __init__.py  __main__.py  actions.py  cli.py  error.py  ignore.py  linkcmd.py  main.py  oschmod.py  permissions.py  stowcmd.py  utils.py  version.py
tests/: conftest.py  test_clean.py  test_cli.py  test_ignore.py  test_link.py  test_stow.py  test_unstow.py  test_utils.py  utils.py
