[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dploy"
version = "0.1.3-beta"
description = "Provides functionality similar to GNU Stow as a cross platform CLI tool and Python 3 module"
license = "MIT"
authors = ["Ryan Carney <arecarn@gmail.com>", "Joel Van Eenwyk <joel.vaneenwyk@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/arecarn/dploy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities"
]
packages = [
    { include = "dploy" },
    { include = "tests" },
]
include = [
    ".pylintrc",
    "CHANGELOG.md",
    "conftest.py",
    "invoke.yaml",
    "requirements.txt",
    "tasks.py",
]

[tool.poetry.scripts]
dploy = "dploy.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8.1"
importlib-metadata = ">=1.0.0"
fs = "^2.0.0"

[tool.poetry.dependencies.win32security]
platform = "win32"
version = "^2.1.0"

[tool.poetry.dependencies.pypiwin32]
platform = "win32"
version = "^223"

[tool.poetry.dev-dependencies]
pytest = ">=4.6"
pytest-cov = ">=2.6.0"
pylint = "^3.0"
radon = ">=2.0.3"
invoke = "^2.0"
black = "^21.9b0"
ruff = ">=0.1.0"

[tool.pylint]
max-line-length = 120
ignore-patterns = [
    "(?:.*[/\\\\]|^)(?:site-packages|__pycache__|\\.venv|\\.mypy_cache|\\.pytest_cache|\\.ruff_cache)(?:[/\\\\]|$)"
]

[tool.pylint.message_control]
disable = [
    "locally-disabled",
    "duplicate-code",
    "len-as-condition",
    "unnecessary-pass",
    "consider-using-f-string"
]

[tool.pylint.reports]
reports = false
